Изменения после урока D4.3

--- a/NewsPortal_Ischenko/NewPortal/templates/post.html
+++ b/NewsPortal_Ischenko/NewPortal/templates/post.html
@@ -20,7 +20,7 @@
         <tr>
             <td>{{ post.name }}</td>
             <td>{{ post.date_creation|date:'d M Y' }}</td>
-            <td>{{ post.category.name_cat }}</td>
+            <td>{{ post.category.name }}</td>
             <td>{{ post.description }}</td>
         </tr>
     {% endfor %}
