--- a/NewsPortal_Ischenko/NewPortal/templates/posts.html
+++ b/NewsPortal_Ischenko/NewPortal/templates/posts.html
@@ -3,10 +3,27 @@
 {% load custom_filters %}
 
 {% block content %}
-    {% if posts %}
+
         <h1>Независимые СМИ</h1>
         <h2>Количество статей: {{ posts|length }}</h2>
         <h3>{{ time_now|date:'M d Y, l' }}</h3>
+
+    <form action="" method="get" >
+        {{ filterset.form.non_field_errors }}
+
+        {{ filterset.form.name__icontains.errors }}
+        <label for="{{ filterset.form.name__icontains.id_for_label }}">Search</label>
+        <input
+            id="{{ filterset.form.name__icontains.id }}"
+            name="{{ filterset.form.name__icontains.name }}"
+            value="{{ filterset.form.name__icontains.value }}"
+            class="form-control"
+        >
+        <input type="submit" class="mt-3 btn-primary" value="Найти" />
+    </form>
+
+    <hr>
+    {% if posts %}
         <table width="90%" style="margin-top: 35px">
         <tr>
             <td><p><strong>Заголовок</strong></p></td>
@@ -18,7 +35,7 @@
         <tr>
             <td>{{ post.name }}</td>
             <td>{{ post.date_creation|date:'d M Y' }}</td>
-            <td>{{ post.category.name_cat }}</td>
+            <td>{{ post.category.name }}</td>
             <td>{{ post.description|truncatewords:20|censor }}</td>
         </tr>
     {% endfor %}
@@ -26,4 +43,27 @@
     {% else %}
     <h3>Публикаций нет!</h3>
     {% endif %}
+   {# Добавляем пагинацию на страницу #}
+
+   {# Информация о предыдущих страницах #}
+   {% if page_obj.has_previous %}
+       <a href="?page=1">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {# Информация о текущей странице #}
+   {{ page_obj.number }}
+
+   {# Информация о следующих страницах #}
+   {% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
+
 {% endblock content %}
