изменения после уроков модуля D6 (HW-03)

--- a/NewsPortal_Ischenko/NewPortal/templates/posts.html
+++ b/NewsPortal_Ischenko/NewPortal/templates/posts.html
@@ -24,7 +24,7 @@
 
     <hr>
     {% if perms.new_portal.add_post %}
-    <a href="{% url 'post_create' %}">Добавить товар</a>
+    <a href="{% url 'post_create' %}">Добавить статью</a>
     {% endif %}
 
     {% if posts %}
